--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  background-color: #fafbff;
+}
+
+.routes li {
+  padding: 5px;
+  font-size: 17px;
+  width: 100%;
+  transition: all 0.3s linear;
+  color: #584883;
+}
+
+.routes li:hover {
+  background-color: #e1e6f1;
+}
+
+/* Define a CSS class to hide the vertical scrollbar */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Optional: Customize scrollbar appearance */
+.hide-scrollbar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.hide-scrollbar::-webkit-scrollbar-thumb {
+  background: #888;
+}
+
+
+a.active{
+      background-color: red !important;
+}
