--- a/src/index.css
+++ b/src/index.css
@@ -2,12 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+
 body {
-  background-color: #fafbff;
+  background-color: #F4F8FB !important;
+  font-family: 'Lato', sans-serif;
+font-family: 'Montserrat', sans-serif;
 }
 
 .routes li {
   padding: 5px;
+  padding-left:20px;
   font-size: 17px;
   width: 100%;
   transition: all 0.3s linear;
