--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,28 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+/* =================== */
 
 body {
   background-color: #F4F8FB !important;
-  font-family: 'Lato', sans-serif;
-font-family: 'Montserrat', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
+  overflow-x: hidden;
 }
+
+.quote_font{
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+/* =================== */
+
+
 
 .routes li {
   padding: 5px;
