--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;1,100;1,400&family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
-
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@200;400;500;600;700&display=swap");
 
 @tailwind base;
 @tailwind components;
@@ -11,22 +9,21 @@
 /* =================== */
 
 body {
-  background-color: #F4F8FB !important;
-  font-family: 'Roboto Condensed', sans-serif;
+  background-color: #f4fafb !important;
+  min-height: 100vh !important;
+  font-family: "Roboto Condensed", sans-serif;
   overflow-x: hidden;
 }
 
-.quote_font{
-  font-family: 'Roboto Condensed', sans-serif;
+.quote_font {
+  font-family: "Roboto Condensed", sans-serif;
 }
 
 /* =================== */
 
-
-
 .routes li {
   padding: 5px;
-  padding-left:20px;
+  padding-left: 20px;
   font-size: 17px;
   width: 100%;
   transition: all 0.3s linear;
@@ -51,7 +48,6 @@ body {
   background: #888;
 }
 
-
-a.active{
-      background-color: red !important;
+a.active {
+  background-color: red !important;
 }
